--- a/css/shapeshift.css
+++ b/css/shapeshift.css
@@ -5,7 +5,7 @@
  
  body {
 	text-align: center;	
-	background: #a46740 url(../images/ag.jpg);
+	background: #a46740;
 	color: #ccc;
 	text-shadow: 0 1px 0 #222;
 }
@@ -28,7 +28,7 @@ a:hover {
 	text-shadow: none;
 }
 
-#game {
+/*#game {
 	border-radius: 10px;
 	border: 1px solid #666;
 	-webkit-box-shadow: 0 -1px 0 #999, 0 1px 0 #999, inset 0 1px 6px #000;
@@ -46,7 +46,7 @@ a:hover {
 	display: -moz-box;
 	-moz-box-pack: center;
 	-moz-box-align: center;	
-}
+}*/
 
 /* Styles for game over popup */
 #popup {
@@ -79,7 +79,7 @@ a:hover {
 #popup-box {
 	width: 400px;
 	height: 300px;
-	background: #ccc url(../images/popup_bg.jpg);
+	/*background: #ccc url(../images/popup_bg.jpg);*/
 	
 	border-radius: 10px;
 	
