--- a/css/shapeshift.css
+++ b/css/shapeshift.css
@@ -5,6 +5,7 @@
  
  body {
 	text-align: center;	
+	font-family: 'Orbitron', serif;
 	background: #a46740;
 	color: #ccc;
 	text-shadow: 0 1px 0 #222;
@@ -28,13 +29,13 @@ a:hover {
 	text-shadow: none;
 }
 
-/*#game {
-	border-radius: 10px;
-	border: 1px solid #666;
+#game {
+	/*border-radius: 10px;*/
+	border: 3px solid #fff;
 	-webkit-box-shadow: 0 -1px 0 #999, 0 1px 0 #999, inset 0 1px 6px #000;
 	
 	position: relative;
-	background: #232 url(../images/bg.jpg);
+	/*background: #232 url(../images/bg.jpg);*/
 	width: 800px;
 	height: 600px;
 	margin: 0 auto;
@@ -46,61 +47,4 @@ a:hover {
 	display: -moz-box;
 	-moz-box-pack: center;
 	-moz-box-align: center;	
-}*/
-
-/* Styles for game over popup */
-#popup {
-	font-family: 'Orbitron', serif;
-	font-size: 28px;
-	font-weight: 700;	  
-	text-shadow: 0px 1px 2px #fff;
-	
-	color: #222;
-	
-	position: absolute;	  
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	
-	background: rgba(0,0,0,.5);
-	
-	display: -webkit-box;
-	-webkit-box-pack: center;
-	-webkit-box-align: center;			
-	
-	-webkit-transition: all .5s ease-in;
-}
-
-#popup h1 {
-	font-weight: 400;
-}
-
-#popup-box {
-	width: 400px;
-	height: 300px;
-	/*background: #ccc url(../images/popup_bg.jpg);*/
-	
-	border-radius: 10px;
-	
-	position: relative;
-	
-	-webkit-box-shadow: 0 5px 5px #333;
-	
-	display: -webkit-box;
-	-webkit-box-pack: center;
-	-webkit-box-align: center;
-	
-	-webkit-transition: all .5s ease-in;
-}
-
-/**
- * Styles to hide the popup box
- */
-#popup.hide {
-	background: rgba(0,0,0,0);
-	visibility: hidden;		
-}
-#popup.hide #popup-box{
-	margin-top: -800px;
 }
